--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "A framrwork of WordPress Customizer API.",
   "licence": "GPL-2.0+",
   "require": {
-    "php": ">=5.3",
+    "php": ">=5.3"
   },
   "authors": [
     {
