--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,13 @@
 {
   "name": "inc2734/wp-customizer-framework",
-  "description": "A framrwork of WordPress Customizer API.",
+  "description": "A library for WordPress Customizer.",
   "license": "GPL-2.0+",
+  "version": "1.0.0",
   "require": {
     "php": ">=5.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.7"
   },
   "authors": [
     {
@@ -13,7 +17,10 @@
   ],
   "autoload": {
     "psr-4" : {
-      "Inc2734\\CustomizerFramework\\" : "src"
+      "Inc2734\\WP_Customizer_Framework\\" : "src"
     }
+  },
+  "scripts": {
+    "test": "bash bin/phpunit.sh"
   }
 }
