--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,9 @@
     "squizlabs/php_codesniffer": "*",
     "wp-coding-standards/wpcs": "*",
     "phpmd/phpmd": "2.*",
-    "phpunit/phpunit": "^5.7",
-    "doctrine/instantiator": "1.0.4",
-    "phpunit/php-token-stream": "1.4.11",
-    "phpdocumentor/reflection-docblock": "3.2.2",
-    "symfony/yaml": "3.4.1",
-    "pdepend/pdepend": "2.5.0",
-    "myclabs/deep-copy": "1.7.0"
+    "phpunit/phpunit": "7.*",
+    "phpcompatibility/phpcompatibility-wp": "*",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.4.3"
   },
   "authors": [
     {
@@ -30,8 +26,8 @@
   },
   "scripts": {
     "test": [
-      "vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs",
-      "vendor/bin/phpcs -p -s -v -n . --standard=./codesniffer.ruleset.xml --extensions=php",
+      "vendor/bin/phpcs --config-set installed_paths vendor/phpcompatibility/php-compatibility,vendor/phpcompatibility/phpcompatibility-paragonie,vendor/phpcompatibility/phpcompatibility-wp,vendor/wp-coding-standards/wpcs",
+      "vendor/bin/phpcs -p -s -v -n . --standard=./.phpcs.xml.dist --extensions=php",
       "vendor/bin/phpmd ./ text phpmd.ruleset.xml --suffixes php --exclude /vendor/,/tests/",
       "bash bin/phpunit.sh"
     ],
