--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "engines": {
+    "node": ">=14.0.0 < 15",
+    "npm": ">=6.9.0 <7"
+  },
   "author": "inc2734",
   "license": "GPL-2.0+",
   "devDependencies": {
-    "@wordpress/env": "^5.7.0",
+    "@wordpress/env": "^8.0.0",
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
@@ -11,11 +15,11 @@
     "stop": "wp-env stop",
     "cli": "wp-env run cli",
     "wp": "wp-env run cli wp",
-    "composer": "wp-env run composer",
-    "pretest": "wp-env start && wp-env run composer 'install --no-interaction'",
-    "test:lint:php": "wp-env run composer run-script lint",
+    "composer": "wp-env run cli --env-cwd=\"wp-content/plugins/wp-customizer-framework\" composer",
+    "pretest": "wp-env start && npm run composer install -- --no-interaction",
+    "test:lint:php": "npm run composer lint",
     "test:lint": "run-s test:lint:*",
-    "test:unit:php": "wp-env run phpunit 'phpunit -c /var/www/html/wp-content/plugins/wp-customizer-framework/.phpunit.xml.dist --verbose'",
+    "test:unit:php": "wp-env start && wp-env run --env-cwd=\"wp-content/plugins/wp-customizer-framework\" tests-wordpress vendor/bin/phpunit -c .phpunit.xml.dist --verbose",
     "test:unit": "run-s test:unit:*",
     "test": "run-s test:*"
   }
