--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "engines": {
-    "node": ">=14.0.0 < 15",
-    "npm": ">=6.9.0 <7"
-  },
-  "author": "inc2734",
-  "license": "GPL-2.0+",
-  "devDependencies": {
-    "@wordpress/env": "^8.0.0",
-    "npm-run-all": "^4.1.5"
-  },
-  "scripts": {
-    "wp-env": "wp-env",
-    "start": "wp-env start",
-    "stop": "wp-env stop",
-    "cli": "wp-env run cli",
-    "wp": "wp-env run cli wp",
-    "composer": "wp-env run cli --env-cwd=\"wp-content/plugins/wp-customizer-framework\" composer",
-    "pretest": "wp-env start && npm run composer install -- --no-interaction",
-    "test:lint:php": "npm run composer lint",
-    "test:lint": "run-s test:lint:*",
-    "test:unit:php": "wp-env start && wp-env run --env-cwd=\"wp-content/plugins/wp-customizer-framework\" tests-wordpress vendor/bin/phpunit -c .phpunit.xml.dist --verbose",
-    "test:unit": "run-s test:unit:*",
-    "test": "run-s test:*"
-  }
+	"engines": {
+		"node": ">=20.10.0",
+		"npm": ">=10.2.3"
+	},
+	"volta": {
+		"node": "20.11.1"
+	},
+	"author": "inc2734",
+	"license": "GPL-2.0+",
+	"devDependencies": {
+		"@wordpress/env": "^10.2.0",
+		"npm-run-all": "^4.1.5"
+	},
+	"scripts": {
+		"wp-env": "wp-env",
+		"start": "wp-env start",
+		"stop": "wp-env stop",
+		"cli": "wp-env run --env-cwd=\"wp-content/plugins/wp-customizer-framework\" cli",
+		"wp": "wp-env run cli --env-cwd=\"wp-content/plugins/wp-customizer-framework\" wp",
+		"composer": "wp-env run cli --env-cwd=\"wp-content/plugins/wp-customizer-framework\" composer",
+		"pretest": "wp-env start && npm run composer install -- --no-interaction",
+		"test:lint:php": "npm run composer lint",
+		"test:lint": "run-s test:lint:*",
+		"test:unit:php": "wp-env start && wp-env run --env-cwd=\"wp-content/plugins/wp-customizer-framework\" tests-wordpress vendor/bin/phpunit -c .phpunit.xml.dist --verbose",
+		"test:unit": "run-s test:unit:*",
+		"test": "run-s test:*"
+	}
 }
